[package]
name = "autopush"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
axum = { version = "0.8.1", default-features = false, features = ["ws", "tokio", "http1"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22"
clap = { version = "4.5.31", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["debug"] }
futures = "0.3.31"
hkdf = "0.12.4"
http = "1.2.0"
jwt = "0.16"
nom = "8.0.0"
p256 = { version = "0.13.2", features = ["ecdsa", "ecdh"] }
pin-project = "1.1.9"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
thiserror = "2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
